--- a/Projects/Tapdash/index.html
+++ b/Projects/Tapdash/index.html
@@ -61,7 +61,7 @@
 	<a class=buuton href=https://scratch.mit.edu/users/SteveIndoPlayScratch/>Visit SteveIndoPlayScratch's Profile!</a>
 	
 	<h2 id=d>Downloads and source code</h2>
-	<p> downloads coming soon </p>
+	<a href="https://github.com/kenzieshane/TapDash/raw/refs/heads/main/tapdash.html" class="buuton"> Download Latest </a>
 	<br>
 	<a class=buuton href=https://www.github.com/kenzieshane/Home>&nbspWebsite Source Code&nbsp</a>
 	<br>
