--- a/Blogs/Soal-Soal-Mengenai-Pancasila-dan-UUD/index_ID.html
+++ b/Blogs/Soal-Soal-Mengenai-Pancasila-dan-UUD/index_ID.html
@@ -11,7 +11,7 @@
 <meta content="text/html">
 <meta charset="UTF-8">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Ringkasan Permutasi dan Kombinasi">
+<meta property="og:title" content="Soal Soal Mengenai Pancasila dan UUD">
 <meta property="og:url" content="https://kenzieshane.github.io/Home/Blogs/index.html">
 <meta property="og:site_name" content="Soal Soal Mengenai Pancasila dan UUD">
 <meta property="og:locale" content="en_US">
@@ -26,7 +26,7 @@
 
 			<p class="moretitle">Blog KS</p>
 	<a class=Button onclick=history.back()>&nbspKembali&nbsp</a>
-	<a class=Buttonleft href="../../navigation.html">&nbspDaftar&nbsp</a>
+	<a class=Buttonleft href="../../navigation_id.html">&nbspDaftar&nbsp</a>
   <div>
     <p style="font-size:50px">&nbsp</p>
 </div>
