--- a/Blogs/index_ID.html
+++ b/Blogs/index_ID.html
@@ -31,7 +31,7 @@
 
 			<p class="moretitle">Blog KS</p>
 	<a class=Button onclick=history.back()>&nbspKembali&nbsp</a>
-	<a class=Buttonleft href="../navigation.html">&nbspDaftar&nbsp</a>
+	<a class=Buttonleft href="../navigation_id.html">&nbspDaftar&nbsp</a>
   <div>
     <p style="font-size:50px">&nbsp</p>
 </div>
