--- a/index.html
+++ b/index.html
@@ -39,15 +39,32 @@
 </div>
     
 	</head>
-	
 	<body>
 	
 	<h1>Welcome to my website</h1>
-	<h2>This is Kenzie Shane's homepage</h2>
-		<hr>
 	<hr>
 	<p class=middle>So, what do you want to do?<p>
 	<p class=middle><a class=links href=Projects/index.html>Projects</a> &nbsp <a class=links href=Blogs/index.html>Blogs</a> &nbsp <a class=links href=News/index.html>News</a> &nbsp <a class=links href=About/index.html>About</a></p>
+	<hr>
+	<h2>Lastest Video:</h2>
+	<iframe
+  src="https://www.youtube-nocookie.com/embed?listType=playlist&list=UU2xRhK2QQ4ZUr8ISLA2q8KA"
+  width="600"
+  height="340"
+  allowfullscreen>
+</iframe>
+<hr>
+  <h2>...And my Instagram feed</h2>
+  <p>Powered by Curator.io (for free! Much Thanks <3)</p>
+<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io (for free! Much Thanks <3)</a></div>
+<script type="text/javascript">
+(function(){
+var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
+i.src="https://cdn.curator.io/published/f78b3bf7-8024-4426-987d-798a0f27a51a.js";
+e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+})();
+</script>
+		<hr>
 
 	</body>
 	</html>
