--- a/About/index_id.html
+++ b/About/index_id.html
@@ -39,26 +39,28 @@
 
 	<hr>
 
-	<p><strong>And here are some bible verses, if you don't mind! :)</strong></p>
-	<p>2 Corinthians 4:16-18 ~ So we do not lose heart. Though our outer self is wasting away, our inner self is being renewed day by day. For this light momentary affliction is preparing for us an eternal weight of glory beyond all comparison, as we look not to the things that are seen but to the things that are unseen. For the things that are seen are transient, but the things that are unseen are eternal.</p>
-	<p>Romans 8:38-39 ~ 38 For I am convinced that neither death nor life, neither angels nor demons, neither the present nor the future, nor any powers, 39 neither height nor depth, nor anything else in all creation, will be able to separate us from the love of God that is in <strong>Christ Jesus our Lord.</strong></p>
+	<p><strong>Dan ini ada bebrapa ayat Alkitab, gapapa yah? :)</strong></p>
+	<p>2 Korintus 4:16-18 <br> 4:16 Sebab itu kami tidak tawar hati, tetapi meskipun manusia lahiriah kami semakin merosot, namun manusia batiniah kami dibaharui dari sehari ke sehari. 4:17 Sebab penderitaan ringan yang sekarang ini, mengerjakan bagi kami kemuliaan kekal yang melebihi segala-galanya, jauh lebih besar dari pada penderitaan kami. 4:18 Sebab kami tidak memperhatikan yang kelihatan, melainkan yang tak kelihatan, karena yang kelihatan adalah sementara, sedangkan yang tak kelihatan adalah kekal.</p>
+	<p>Roma 8:38-39<br>
+8:38 Sebab aku yakin, bahwa baik maut, maupun hidup, baik malaikat-malaikat, maupun pemerintah-pemerintah, baik yang ada sekarang, maupun yang akan datang, 8:39 atau kuasa-kuasa, baik yang di atas, maupun yang di bawah, ataupun sesuatu makhluk lain, tidak akan dapat memisahkan kita dari kasih Allah, yang ada dalam <b>Kristus Yesus</b>, Tuhan kita.</p>
 	<hr>
 </head>
 <body>
-	<p> Hello! My name is <strong>Kenzie Shane Setiawan</strong>. I was born on the <em> 16th of January 2010 </em>. I made projects in my free time and also doing lots of other things too lol, i think i may have tried to make music recently, too! </p>
-	<p>Open Sans is designed by Steve Matteson. <a href="../Licenses/OFLOS.html">Licensing</a></p>
-	<p>Pixelify Sans is designed by Stefie Justprince. <a href="../Licenses/OFLPS.html">Licensing</a></p>
-	<p>IBM Plex Mono is designed by <a href=https://fonts.google.com/?query=Mike%20Abbink>Mike Abbink</a>, <a href=https://fonts.google.com/?query=Bold%20Monday>Bold Monday</a> . <a href="../Licenses/OFLIPM.html">Licensing</a></p>
+	<p> Halo! Namaku adalah <strong>Kenzie Shane Setiawan</strong>. Aku lahir pada tanggal <em> 16 Januari 2010 </em>. Dalam waktu senggang aku suka membuat proyek-proyek dan hal lainnya. Belakangan ini mungkin aku mencoba membuat musik juga? </p>
+	<p>Open Sans di desain oleh Steve Matteson. <a href="../Licenses/OFLOS.html">Lisensi</a></p>
+	<p>Pixelify Sans di desain oleh Stefie Justprince. <a href="../Licenses/OFLPS.html">Lisensi</a></p>
+	<p>IBM Plex Mono di desain oleh <a href=https://fonts.google.com/?query=Mike%20Abbink>Mike Abbink</a>, <a href=https://fonts.google.com/?query=Bold%20Monday>Bold Monday</a> . <a href="../Licenses/OFLIPM.html">Lisensi</a></p>
 
 	<hr>
 	<hr>
-	<h1 id=s>Socials</h1>
-	<p>Geometry Dash Account:<a href="#">usernameks</a></p>
-	<p>Email to contact: Archivekenzieshane@gmail.com<br> cortadoistheonlyone@gmail.com</p>
-	<p>Discord username: @username_imaguy</p>
-	<p>Youtube channel: <a href=https://www.youtube.com/@imaguyyesmale>username</a></p>
-	<p>Instagram Account: <a href=https://www.instagram.com/username_.ks/>@username_.ks</a></p>
-  <p>Nama pengguna Twitter: <a href=https://x.com/_Usernameks>@_Usernameks</a></p>
+	<h1 id=s>Kehidupan Sosial</h1>
+	<p>Akun Geometry Dash:<a href="#">usernameks</a></p>
+	<p>Email untuk dihubungi: Archivekenzieshane@gmail.com<br> cortadoistheonlyone@gmail.com</p>
+	<p>Nama pengguna Discord: @username_imaguy</p>
+	<p>Nama Saluran Youtube: <a href=https://www.youtube.com/@imaguyyesmale>username</a></p>
+	<p>Nama pengguna Instagram: <a href=https://www.instagram.com/username_.ks/>@username_.ks</a></p>
+	<p>Nama pengguna Twitter: <a href=https://x.com/_Usernameks>@_Usernameks</a></p>
+
 
 </body>
 </html>
