--- a/navigation_id.html
+++ b/navigation_id.html
@@ -21,32 +21,31 @@
 </style>
 	<link rel="stylesheet" href="css_styles_or_something.css">
 
-<title>KS - Navigation</title>
-<p class="moretitle">Menu</p>
-<a class=Button onclick=history.back()>&nbspBack&nbsp</a>
-<a class=Buttonleft href="#">&nbspMenu&nbsp</a>
+<title>KS - Daftar</title>
+<p class="moretitle">Daftar</p>
+<a class=Button onclick=history.back()>&nbsp;Kembali&nbsp;</a>
 
 </head>
 
 <body>
 	<br>
 	<div>
-	<a class=bumuton href="Projects/index.html">&nbspvisit&nbsp</a>
-<a href=Projects/index.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp&nbspProjects</a>
+	<a class=bumuton href="Projects/index.html">&nbsp;Kunjungi&nbsp;</a>
+<a href=Projects/index.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp;&nbsp;Proyek</a>
 	</div>
 <hr>
 <div>
-	<a class=bumuton href="Blogs/index.html">&nbspvisit&nbsp</a>
-<a href=Blogs/index.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp&nbspBlogs</a>
+	<a class=bumuton href="Blogs/index.html">&nbsp;Kunjungi&nbsp;</a>
+<a href=Blogs/index.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp;&nbsp;Blog-Blog</a>
 </div>
 <hr>
 <div>
-		<a class=bumuton href="About/index.html">&nbspvisit&nbsp</a>
-<a href=About/index.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp&nbspAbout</a>
+		<a class=bumuton href="About/index.html">&nbsp;Kunjungi&nbsp;</a>
+<a href=About/index_id.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp;&nbsp;Tentang</a>
 </div>
 <hr>
 <div>
-	<a class=bumuton href="index.html">&nbspvisit&nbsp</a>
-<a href=index.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp&nbspHome</a>
+	<a class=bumuton href="index.html">&nbsp;Kunjungi&nbsp;</a>
+<a href=index_id.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp;&nbsp;Beranda</a>
 </div>
 <hr>
