--- a/404i.html
+++ b/404i.html
@@ -26,13 +26,17 @@
 <a class=Button onclick="history.back()">&nbspBack&nbsp</a>
 
 
-<span style="font-size:200%;position: relative;top:20px;text-align:center;justify-content:center;font-weight: bold;color:#000000"><h1>Oops! Page not found!</h1>
+<span style="font-size:200%;position: relative;top:20px;text-align:center;justify-content:center;font-weight: bold;color:#000000"><h1>Oops! Page not found!</h1> <p><em>Ups, Laman tidak ditemukan!</em></p>
 <p> Please check your writings again or the link you've clicked no longer exists</p>
+<p><em>Tolong periksa tulisan alamat situs lagi atau link yang diklik tidak ada lagi.</p></em>
 
 <p> Check the website status in my instagram, youtube or Whatsapp Channel. </p>
+<p><em>Periksa status website di instagram, youtube, atau saluran Whatsapp saya.</em></p>
 
 <h1>Quick Notice</h1>
-<p>(20 Dec 2024) Projects are still in migration process, please wait until i finished revamping the website....i guess? Contact me on my <a class=links href=About/index.html#s>socials</a> if you really want to play it NOW.</p></p>
+<p><em>Pemberitahuan penting</em></p>
+<p>(20 Dec 2024) Projects are still in migration process, please wait until i finished revamping the website....i guess? Contact me on my <a class=links href=About/index.html#s>socials</a> if you really want to see it NOW.</p>
+<p><em>(20 Dec 2024) Beberapa proyek masih dalam proses migrasi, harap tunggu hingga saya selesai merombak ulang website ini....kurasa? Hubungi saya di <a class=links href=About/index.html#s>Kehidupan Sosial Saya</a> jika kamu ingin mengunjunginya SEKARANG.</em></p>
 <h2>Quick links:</h2></span>
 
 <p class=middle><a class=links href=Projects/index.html>Projects</a> &nbsp <a class=links href=Blogs/index.html>Blogs</a> &nbsp <a class=links href=News/index.html>News</a> &nbsp <a class=links href=About/index.html>About</a></p>
