--- a/About/index_id.html
+++ b/About/index_id.html
@@ -30,12 +30,12 @@
             href="../Images/1722594016676.jpg"
             type="image/x-icon" >
 
-			<p class="moretitle">About</p>
-			<a class=Button onclick="history.back()">&nbspBack&nbsp</a>
-			<a class=Buttonleft href="../../navigation.html">&nbspMenu&nbsp</a>
+			<p class="moretitle">Tentang</p>
+			<a class=Button onclick="history.back()">&nbspKembali&nbsp</a>
+			<a class=Buttonleft href="../../navigation_id.html">&nbspDaftar&nbsp</a>
 	
-	<h1>Hello! So...About me, huh?</h1>
-	<p><strong>I'm from Indonesia! For more in-depth, you should scroll a bit down.</strong><p>
+	<h1>Halo...Jadi, tentang aku ya?</h1>
+	<p><strong>Aku berasal dari Indonesia! Untuk info lebih lanjut coba pergi ke bawah laman ini :)</strong><p>
 
 	<hr>
 
