--- a/navigation_id.html
+++ b/navigation_id.html
@@ -35,17 +35,17 @@
 	</div>
 <hr>
 <div>
-	<a class=bumuton href="Blogs/index.html">&nbsp;Kunjungi&nbsp;</a>
-<a href=Blogs/index.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp;&nbsp;Blog-Blog</a>
+	<a class=bumuton href="Blogs/index_id.html">&nbsp;Kunjungi&nbsp;</a>
+<a href=Blogs/index_id.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp;&nbsp;Blog-Blog</a>
 </div>
 <hr>
 <div>
-		<a class=bumuton href="About/index.html">&nbsp;Kunjungi&nbsp;</a>
+		<a class=bumuton href="About/index_id.html">&nbsp;Kunjungi&nbsp;</a>
 <a href=About/index_id.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp;&nbsp;Tentang</a>
 </div>
 <hr>
 <div>
-	<a class=bumuton href="index.html">&nbsp;Kunjungi&nbsp;</a>
+	<a class=bumuton href="index_id.html">&nbsp;Kunjungi&nbsp;</a>
 <a href=index_id.html style=text-decoration:none;font-size:30px;display:flex;background-color:#DDDDDD;width:100%>&nbsp;&nbsp;Beranda</a>
 </div>
 <hr>
