--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   allowfullscreen>
 </iframe>
 <hr>
-  <h2>...And my Instagram feed</h2>
+  <h2>...And my other stuff</h2>
   <p>Powered by Curator.io (for free! Much Thanks <3)</p>
 <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io (for free! Much Thanks <3)</a></div>
 <script type="text/javascript">
