--- a/Projects/index.html
+++ b/Projects/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 	<style>
 /* open-sans-regular - cyrillic_cyrillic-ext_greek_greek-ext_hebrew_latin_latin-ext_math_symbols_vietnamese */
@@ -28,44 +30,43 @@
             type="image/x-icon" >
 
 			<p class="moretitle">Projects</p>
-	<a class=Button href="../index.html">&nbspBack&nbsp</a>
-	<a class=Buttonleft href="../navigation.html">&nbspMenu&nbsp</a>
+	<a class=Button href="../index.html">&nbsp;Back&nbsp;</a>
+	<a class=Buttonleft href="../navigation.html">&nbsp;Menu&nbsp;</a>
   <div>
-    <p style="font-size:50px">&nbsp</p>
+    <p style="font-size:50px">&nbsp;</p>
 </div>
 			
 	<link rel="stylesheet" href="../css_styles_or_something.css">
-	<h1>Projects </h1>
+	<center><h1>Projects </h1></center>
 </head>
 <body>
 	<hr>
-	<h1>PC + Touchscreen</h1>
+	<center><h1>PC + Touchscreen</h1></center>
 	<hr>
-	<p><strong>Optimized for PC:</strong></p>
+	<center><p><strong>Optimized for PC:</strong></p></center>
 	<hr>
-	<p > Decimal-Octal-Binary-Hexadecimal -> <a class="bumuton" href="../Projects/dob/index.html"> &nbspVisit&nbsp </a> </p>
-	<hr>
-	<a class="block" href="../Projects/HANGMAN/index.html"> <div class="block"> <p > Hangman -> <a class="bumuton" href="../Projects/HANGMAN/index.html"> &nbspVisit&nbsp </a> </p> </div> </a>
-	<hr>
+	<a class="Gamesbutton" href="../Projects/dob/index.html">Decimal-Octal-Binary-Hexadecimal</a> </p>
+	<a class="Gamesbutton" href="../Projects/HANGMAN/index.html">HANGMAN</a> </p> </div> </a>
 	<p><strong>Optimized for Touchscreen:</strong></p>
-	<p > Trimaut -> <a class="bumuton" href="../Projects/Trimaut/index.html"> &nbspVisit&nbsp </a> </p>
+	<p > Trimaut -> <a class="bumuton" href="../Projects/Trimaut/index.html"> &nbsp;Visit&nbsp; </a> </p>
 	<hr>
-	<p > Tap!Dash -> <a class="bumuton" href="../Projects/Tapdash/index.html"> &nbspVisit&nbsp</a> </p>
+	<p > Tap!Dash -> <a class="bumuton" href="../Projects/Tapdash/index.html"> &nbsp;Visit&nbsp;</a> </p>
 	<hr>
-	<p > KSOS -> <a class="bumuton" href="../Projects/KSOS/index.html"> &nbspVisit&nbsp</a> </p>
+	<p > KSOS -> <a class="bumuton" href="../Projects/KSOS/index.html"> &nbsp;Visit&nbsp;</a> </p>
 	<hr>
-	<p > Logical Operation -> <a class="bumuton" href="../Projects/Logical Operation/index.html"> &nbspVisit&nbsp </a> </p>
+	<p > Logical Operation -> <a class="bumuton" href="../Projects/Logical Operation/index.html"> &nbsp;Visit&nbsp; </a> </p>
 	<hr>
-	<p > Rock Paper Scissors -> <a class="bumuton" href="../Projects/rockpaperscissors/index.html"> &nbspVisit&nbsp </a> </p>
+	<p > Rock Paper Scissors -> <a class="bumuton" href="../Projects/rockpaperscissors/index.html"> &nbsp;Visit&nbsp; </a> </p>
 	<hr>
-	<p > 1-2-1 TicTacToe -> <a class="bumuton" href="../Projects/1-2-1/index.html"> &nbspVisit&nbsp </a> </p>
+	<p > 1-2-1 TicTacToe -> <a class="bumuton" href="../Projects/1-2-1/index.html"> &nbsp;Visit&nbsp; </a> </p>
 	<hr>
-	<p >Logical Operation Rewritten -> <a class="bumuton" href="../Projects/LO-Rewritten/index.html"> &nbspVisit&nbsp </a> </p>
+	<p >Logical Operation Rewritten -> <a class="bumuton" href="../Projects/LO-Rewritten/index.html"> &nbsp;Visit&nbsp; </a> </p>
 	<hr>
 	<h1>PC Only</h1>
 	<hr>
-	<p > Tatreue Demo -> <a class="bumuton" href="../Projects/Tatreue/index.html"> &nbspVisit&nbsp </a> </p>
+	<p > Tatreue Demo -> <a class="bumuton" href="../Projects/Tatreue/index.html"> &nbsp;Visit&nbsp; </a> </p>
 	<hr>
-	<p > Maze i guess -> <a class="bumuton" href="../Projects/Maze-i-guess/index.html"> &nbspVisit&nbsp </a> </p>
+	<p > Maze i guess -> <a class="bumuton" href="../Projects/Maze-i-guess/index.html"> &nbsp;Visit&nbsp; </a> </p>
 	<hr>
 </body>
+</html>
