--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	</head>
 	<body>
 	
+	<p>English // <a class=links href=index_ID.html>Bahasa Indonesia</a></p>
 	<h1>Welcome to my website</h1>
 	<hr>
 	<p class=middle>So, what do you want to do?<p>
