--- a/index_id.html
+++ b/index_id.html
@@ -41,6 +41,7 @@
 	</head>
 	<body>
 	
+	<p>Bahasa Indonesia // <a href=index.html class=links> Bahasa Inggris </a></p>
 	<h1>Selamat datang di situs saya!</h1>
 	<hr>
 	<p class=middle>Jadi, mau ngapain nih?<p>
