--- a/Projects/index.html
+++ b/Projects/index.html
@@ -40,32 +40,16 @@
 	<center><h1>Projects </h1></center>
 </head>
 <body>
-	<hr>
-	<center><h1>PC + Touchscreen</h1></center>
-	<hr>
-	<center><p>Ultimate Compatibility</p></center>
-	<a class="bumuton" href="../Projects/Tapdash/index.html">Tap!Dash</a>
-	<center><p><strong>Optimized for PC:</strong></p></center>
-	<hr>
+	<a class="Gamesbutton" href="../Projects/Tapdash/index.html">Tap!Dash</a>
 	<a class="Gamesbutton" href="../Projects/dob/index.html">Decimal-Octal-Binary-Hexadecimal</a>
 	<a class="Gamesbutton" href="../Projects/HANGMAN/index.html">HANGMAN</a>
-	<center><p><strong>Optimized for Touchscreen:</strong></p><center>
 	<a class="Gamesbutton" href="../Projects/Trimaut/index.html">Trimaut</a>
   <a class="Gamesbutton" href="../Projects/KSOS/index.html">KSOS</a>
-	<hr>
 <a class="Gamesbutton" href="../Projects/Logical Operation/index.html">Logical Operation</a>
-	<hr>
 	<a class="Gamesbutton" href="../Projects/rockpaperscissors/index.html">Rock, Paper, Scissors!</a>
-	<hr>
 <a class="Gamesbutton" href="../Projects/1-2-1/index.html">1-2-1</a>
-	<hr>
 <a class="Gamesbutton" href="../Projects/LO-Rewritten/index.html">LO-Rewritten</a>
-	<hr>
-	<h1>PC Only</h1>
-	<hr>
 <a class="Gamesbutton" href="../Projects/Tatreue/index.html">Tatreue (Soon to be replaced) (LEGACY VERSION)</a>
-	<hr>
 <a class="Gamesbutton" href="../Projects/Maze-i-guess/index.html">Maze-i-guess (OBSOLETE)</a>
-	<hr>
 </body>
 </html>
