--- a/Projects/index.html
+++ b/Projects/index.html
@@ -40,16 +40,24 @@
 	<center><h1>Projects </h1></center>
 </head>
 <body>
-	<a class="Gamesbutton" href="../Projects/Tapdash/index.html">Tap!Dash</a>
-	<a class="Gamesbutton" href="../Projects/dob/index.html">Decimal-Octal-Binary-Hexadecimal</a>
-	<a class="Gamesbutton" href="../Projects/HANGMAN/index.html">HANGMAN</a>
-	<a class="Gamesbutton" href="../Projects/Trimaut/index.html">Trimaut</a>
-  <a class="Gamesbutton" href="../Projects/KSOS/index.html">KSOS</a>
-<a class="Gamesbutton" href="../Projects/Logical Operation/index.html">Logical Operation</a>
-	<a class="Gamesbutton" href="../Projects/rockpaperscissors/index.html">Rock, Paper, Scissors!</a>
-<a class="Gamesbutton" href="../Projects/1-2-1/index.html">1-2-1</a>
-<a class="Gamesbutton" href="../Projects/LO-Rewritten/index.html">LO-Rewritten</a>
-<a class="Gamesbutton" href="../Projects/Tatreue/index.html">Tatreue (Soon to be replaced) (LEGACY VERSION)</a>
-<a class="Gamesbutton" href="../Projects/Maze-i-guess/index.html">Maze-i-guess (OBSOLETE)</a>
+<div class=centerx>	
+    <a class="Gamesbutton" href="../Projects/Tapdash/index.html">Tap!Dash</a> &nbsp&nbsp
+	<a class="Gamesbutton" href="../Projects/dob/index.html">Decimal-Octal-Binary-Hexadecimal</a> &nbsp&nbsp
+	<a class="Gamesbutton" href="../Projects/HANGMAN/index.html">HANGMAN</a> &nbsp&nbsp
+<br>
+<br>
+	<a class="Gamesbutton" href="../Projects/Trimaut/index.html">Trimaut</a> &nbsp&nbsp
+    <a class="Gamesbutton" href="../Projects/KSOS/index.html">KSOS</a> &nbsp&nbsp
+    <a class="Gamesbutton" href="../Projects/Logical Operation/index.html">Logical Operation</a> &nbsp&nbsp
+<br>
+<br>
+	<a class="Gamesbutton" href="../Projects/rockpaperscissors/index.html">Rock, Paper, Scissors!</a> &nbsp&nbsp
+    <a class="Gamesbutton" href="../Projects/1-2-1/index.html">1-2-1</a> &nbsp&nbsp
+    <a class="Gamesbutton" href="../Projects/LO-Rewritten/index.html">LO-Rewritten</a> &nbsp&nbsp
+<br>
+<br>
+    <a class="Gamesbutton" href="../Projects/Tatreue/index.html">Tatreue (Soon to be replaced) (LEGACY VERSION)</a> &nbsp&nbsp
+    <a class="Gamesbutton" href="../Projects/Maze-i-guess/index.html">Maze-i-guess (OBSOLETE)</a> &nbsp&nbsp
+<div>
 </body>
 </html>
